--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>La Fresque de la Biodiversité</title>
 </head>
 
-<body >
+<body>
   <div class="has-background-dark-beige is-fullwidth " style="height: 100px; z-index: 1000;">
     <nav class="navbar  is-fixed-top is-max-desktop has-background-dark-beige "
       style="width: 100%; margin: auto; height: 100px;">
@@ -52,10 +52,32 @@
                 Post-fresque
               </a>
             </div>
+            <div style="margin: auto;">
+              <a href="mailto:fresquedelabiodiversite@gmail.com" class="navbar-item is-tab">
+                Contact
+              </a>
+            </div>
           </div>
+
         </div>
       </div>
     </nav>
+  </div>
+
+  <div style="width: 100%; background: #efefef; display: flex; justify-content: center;">
+    <div class="columns">
+      <div class="column is-6 is-12-mobile">
+        <img src="Images/congres_mondial_nature.png" alt="Congrès Mondial de la Nature">
+      </div>
+      <div class="column is-6 is-12-mobile has-text-right is-flex" style="align-items: center">
+        <div style="font-size: 1.1em;">
+          <p>Retrouvez-nous au Congrès Mondial de la Nature à Marseille</p>
+          <p>En C3-C5 du 4 au 6 septembre</p>
+          <p>En C13 du 4 au 7 septembre</p>
+          <p>En A10 du 9 au 11 septembre</p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div id="main" class="has-background-beige">
@@ -67,10 +89,10 @@
           <h6 class="subtitle is-4 py-4 is-relative" style="z-index: 10;"> Découvrez au travers d'<span
               class="has-text-weight-bold">un atelier ludique et collaboratif </span>l'aspect systémique de l'érosion de
             la
-            biodiversité : la sixième extinction de masse en cours.</h6>
+            biodiversité : ce qu’elle est, ce qu’elle permet et ce qui la dégrade.</h6>
           <a href=" https://www.billetweb.fr/multi_event.php?user=72404"
             class="button is-primary is-medium has-text-weight-bold">Je participe !</a>
-            
+
         </div>
 
         <img id="img2" class="overlay" src="Images/fresque.svg" alt="Fresque" style="max-width: 700px;">
@@ -98,10 +120,6 @@
           <div class="separator is-centered has-background-primary mt-5">
           </div>
 
-          <h6 class="subtitle is-6 mt-6 is-relative" style="max-width: 700px; margin: auto;">• D'après les neuf limites
-            planétaires définies par le Stockholm Resilience Center dès 2009, certains paramètres liés à la biodiversité
-            (diversité génétique, cycles du phosphore et de l'azote) sont entrés dans le rouge, soit <strong>en phase de
-              risque d'effondrement. </strong></h6>
           <h6 class="subtitle is-6 mt-5 is-relative" style="max-width: 700px;  margin: auto;">• <strong> Pour faire
               comprendre
               les enjeux et pressions autour de la biodiversité </strong> se basant sur le rapport de l'IPBES <strong>au
@@ -147,31 +165,27 @@
           <tbody>
             <tr>
               <td class="has-text-weight-bold py-5 pr-2">"Apéro" avec 3 écosystèmes</td>
-              <td class="py-5 pr-2"><span class="has-text-weight-bold">les 45 cartes du jeu</span> <span
-                  class="subtitle is-5">(1h)</span></td>
-              <td class="py-5"><span class="has-text-weight-bold">Faire de votre Fresque une oeuvre d'art </span><span
-                  class="subtitle is-5">(10min)</span></td>
-              <td class="py-5"><span class="has-text-weight-bold">Débrief et plan d'action selon vos objectifs
-                </span><span class="subtitle is-5">(30min)</span></td>
+              <td class="py-5 pr-2"><span class="has-text-weight-bold">les 39 cartes du jeu</td>
+              <td class="py-5"><span class="has-text-weight-bold">Faire de votre Fresque une oeuvre d'art </td>
+              <td class="py-5"><span class="has-text-weight-bold">Débriefing et pistes d'actions</td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
-              <td class="pr-3">Comprendre un écosystème à l'équilibre perturbé par des activités humaines puis en
-                découvrir les
-                conséquences.</td>
-              <td class="pr-3">Distribuées en 5 lots, les participants répartis par équipe de 5-7 doivent retrouver les
-                liens entre
-                les
-                45 cartes pour comprendre les enjeux autour de l'effondrement de la biodiversité.</td>
-              <td class="pr-3">Les participants doivent décorer & adapter leur Fresque à leur contexte vis-à-vis de la
-                biodiversité
-                afin
-                de restituer leur travail devant les autres équipes.</td>
-              <td class="pr-3">Selon l'objectif de la séance, un débrief sur les apprentissages vise à élaborer un plan
-                d'action en
-                réfléchissant de manière collaborative aux solutions pour agir face à l'érosion de la biodiversité.</td>
-
+              <td class="pr-3">Recréer un écosystème et découvrir les impacts d’une perturbation dans celui-ci.</td>
+              <td class="pr-3">
+                Distribuées en 5 lots, les participants répartis par équipe de 5-7 doivent retrouver les liens entre
+                les 39 cartes pour comprendre ce qu’est la Biodiversité, ce qu’elle apporte et ce qui la dégrade.
+              </td>
+              <td class="pr-3">
+                Les participants doivent décorer et trouver un titre à leur Fresque afin de restituer leur travail
+                devant les autres équipes.
+              </td>
+              <td class="pr-3">
+                L'objectif de la Fresque de la Biodiversité est de faire prendre conscience des dépendances ou impacts
+                sur la Biodiversité que l’on peut avoir, et de réfléchir de manière collective aux actions que l’on
+                pourrait mettre en place pour sa préservation.
+              </td>
             </tr>
           </tfoot>
         </table>
@@ -186,9 +200,9 @@
 
 
         <div class="numbersteps mt-6">2.</div>
-        <div class="has-text-weight-bold is-4 mb-0 py-2 subtitle ">les 45 cartes du jeu</span> <span
+        <div class="has-text-weight-bold is-4 mb-0 py-2 subtitle ">les 39 cartes du jeu</span> <span
             class="subtitle is-5">(1h)</span></div>
-        <div>Distribuées en 5 lots, les participants répartis par équipe de 5-7 doivent retrouver les liens entre les 45
+        <div>Distribuées en 5 lots, les participants répartis par équipe de 5-7 doivent retrouver les liens entre les 39
           cartes pour comprendre les enjeux autour de l'effondrement de la biodiversité.</div>
 
 
@@ -201,8 +215,8 @@
 
 
         <div class="numbersteps mt-6">4.</div>
-        <div class="has-text-weight-bold is-4 mb-0 py-2 subtitle ">Débrief et plan d'action selon vos objectifs
-          </span><span class="subtitle is-5">(30min)</span></div>
+        <div class="has-text-weight-bold is-4 mb-0 py-2 subtitle ">Débriefing et pistes d'actions
+        </div>
         <div>Selon l'objectif de la séance, un débrief sur les apprentissages vise à élaborer un plan d'action en
           réfléchissant de manière collaborative aux solutions pour agir face à l'érosion de la biodiversité.</div>
       </div>
@@ -220,7 +234,7 @@
           </div>
           <div class="has-text-danger-light is-6 pb-6">
             • 20 minutes : comprendre un écosystème. <br>
-            • 1 heure : 5 lots pour 45 cartes. <br>
+            • 1 heure : 5 lots pour 39 cartes. <br>
             • 40 minutes : créativité + restitution. <br>
             • 1 heure : débrief de l'atelier
           </div>
@@ -259,7 +273,7 @@
         <div class="has-text-weight-bold is-4 mb-0 py-2 subtitle has-text-beige">3 heures d'atelier</div>
         <div class="has-text-beige">
           • 20 minutes : comprendre un écosystème. <br>
-          • 1 heure : 5 lots pour 45 cartes. <br>
+          • 1 heure : 5 lots pour 39 cartes. <br>
           • 40 minutes : créativité + restitution. <br>
           • 1 heure : débrief de l'atelier
         </div>
@@ -305,7 +319,8 @@
               Les participants à titre professionnel sont acceptés dans la limite d'un participant par entreprise.
             </p>
             <p class="is-6">
-              Pour une session en interne dans votre entreprise, nous vous invitons à contacter un des co-auteurs.
+              Pour une session en interne dans votre entreprise, nous vous invitons à contacter un des co-auteurs
+              ou un animateur professionnel.
             </p>
           </div>
         </div>
@@ -318,16 +333,26 @@
           <script type="text/javascript" src="https://www.billetweb.fr/js/export.js"></script>
         </div>
       </div>
-      <div id="participer" class="is-absolute" style="top: -50px;"></div>     
+      <div id="participer" class="is-absolute" style="top: -50px;"></div>
     </div>
   </div>
 
   <div class="columns is-flex is-justify-content-flex-end m-0 py-6 has-background-clay">
     <div class="column is-8 has-background-light-brown is-relative" style="border-radius: 5px;">
-      <h2 class="title is-3 py-5 ml-4 has-text-light-beige">
-        Ils sont déjà <span class="has-text-weight-bold has-text-light-beige">plus de 5000 </span> à avoir participé
-        !
-      </h2>
+      <div class="ml-4 py-5 has-text-light-beige">
+        <h2 class="title is-3 has-text-light-beige">
+          Ils sont déjà <span class="has-text-weight-bold has-text-light-beige">plus de 5000 </span> à avoir participé
+          !
+        </h2>
+        <div class="level">
+          <p class="has-text-light-beige">
+            Vous souhaitez avoir plus d'informations?
+          </p>
+          <a href="mailto:fresquedelabiodiversite@gmail.com">
+            <button class="button">Contactez-nous</button>
+          </a>
+        </div>
+      </div>
       <img class="is-absolute" style="right: 0px; top: -40px; width: 20vw; min-width: 300px;" src="Images/plante02.svg"
         alt="Plante02">
     </div>
@@ -338,33 +363,31 @@
     <div class="container px-4" style="max-width: 1230px;">
       <div class="columns pt-6 " style="padding-bottom: 100px;">
         <div class="column is-6 pl-0">
-          <h1 class="title is-2 has-text-centered-mobile"><span class="has-text-weight-bold"> Les auteurs</span> de l'atelier</h1>
+          <h1 class="title is-2 has-text-centered-mobile"><span class="has-text-weight-bold"> Les auteurs</span> de
+            l'atelier</h1>
           <div class="separator has-background-primary mt-2 has-margin-auto-mobile">
           </div>
-          <div class="culumns is-12 is-flex mt-6 is-flex is-flex-direction-column-mobile is-align-content-center-mobile">
+          <div
+            class="culumns is-12 is-flex mt-6 is-flex is-flex-direction-column-mobile is-align-content-center-mobile">
             <div class="column is-6 has-max-width mx-mobile">
               <figure class="image is-relative" style="width: 180px; height: 160px;">
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
 
                 </div>
-                <img width="180px" src="Images/charlesSirotLQ.jpg" class="is-relative" style="border-radius: 4px;">
-
+                <img width="180px" src="Images/geraldineVuillierLQ.jpg" class="is-relative" style="border-radius: 4px;">
               </figure>
-
               <span class='is-flex mt-4'>
                 <h1 class="title is-5 has-text-weight-bold py-4">
-                  Charles Sirot
+                  Géraldine Vuillier
                 </h1>
-                <a href="https://www.linkedin.com/in/charlessirot/"><img src="Images/pictoBulleLinkedin.svg"
+                <a href="https://www.linkedin.com/in/geraldine-vuillier/"><img src="Images/pictoBulleLinkedin.svg"
                     class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
-
-              <h1 class="subtitle is-6 is-italic">
-                " Nous n'héritons pas de la terre de nos parents, nous l'empruntons à nos enfants. "
+              <h1 class="subtitle is-6 is-italic figure-quote">
+                " Le monde ne mourra pas par manque de merveilles, mais uniquement par manque d’émerveillement "
               </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right"
-                style="padding-bottom: 21px;">
-                Antoine de Saint-Exupéry
+              <h1 class="subtitle is-6 has-text-weight-bold has-text-right">
+                Vincent Munier
               </h1>
 
               <figure class="image is-relative" style="width: 180px; height: 160px;">
@@ -381,11 +404,11 @@
                     class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
 
-              <h1 class="subtitle is-6 is-italic">
-                <!-- Entrer citation -->
+              <h1 class="subtitle is-6 is-italic figure-quote">
+                " Les oiseaux mangent des abeilles ? Mais c’est horrible… "
               </h1>
               <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right">
-                <!-- Entrer auteur citation -->
+                Participant inconnu
               </h1>
             </div>
 
@@ -394,20 +417,24 @@
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
 
                 </div>
-                <img width="180px" src="Images/geraldineVuillierLQ.jpg" class="is-relative" style="border-radius: 4px;">
+                <img width="180px" src="Images/charlesSirotLQ.jpg" class="is-relative" style="border-radius: 4px;">
+
               </figure>
+
               <span class='is-flex mt-4'>
                 <h1 class="title is-5 has-text-weight-bold py-4">
-                  Géraldine Vuillier
+                  Charles Sirot
                 </h1>
-                <a href="https://www.linkedin.com/in/geraldine-vuillier/"><img src="Images/pictoBulleLinkedin.svg"
+                <a href="https://www.linkedin.com/in/charlessirot/"><img src="Images/pictoBulleLinkedin.svg"
                     class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
-              <h1 class="subtitle is-6 is-italic">
-                " Le monde ne mourra pas par manque de merveilles, mais uniquement par manque d’émerveillement "
+
+              <h1 class="subtitle is-6 is-italic figure-quote">
+                " Nous n'héritons pas de la terre de nos parents, nous l'empruntons à nos enfants. "
               </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold has-text-right">
-                Vincent Munier
+              <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right"
+                style="padding-bottom: 21px;">
+                Antoine de Saint-Exupéry
               </h1>
 
               <figure class="image is-relative" style="width: 180px; height: 160px;">
@@ -420,10 +447,10 @@
                 <h1 class="title is-5 has-text-weight-bold py-4">
                   Deloitte
                 </h1>
-                <a href="https://www2.deloitte.com/fr/fr.html"><img src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2"
+                <a href="https://www2.deloitte.com/fr/fr.html" target="_blank"><img src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2"
                     style="height: 30.74px; width: 31.47px;"></a>
               </span>
-              <h1 class="subtitle is-6 is-italic">
+              <h1 class="subtitle is-6 is-italic figure-quote">
                 <!-- entrer citation -->
               </h1>
               <h1 class="subtitle is-6 has-text-weight-bold has-text-right">
@@ -551,8 +578,8 @@
             </div>
             <div class="subtitle is-6 has-text-weight-bold py-6 mb-0">
               Pour donner votre avis suite à une participation, vous pouvez
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeY1xYm9YJdxOwz0kUQn79qSMUWX-rRj2TOrHS31QPhcah1og/viewform" target="_blank"
-                class="is-underlined has-text-weight-bold has-text-classic-dark has-hovering">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeY1xYm9YJdxOwz0kUQn79qSMUWX-rRj2TOrHS31QPhcah1og/viewform"
+                target="_blank" class="is-underlined has-text-weight-bold has-text-classic-dark has-hovering">
                 remplir ce questionnaire.
               </a>
               <br>
@@ -600,15 +627,16 @@
           </div>
 
           <h1 class="subtitle is-6 has-text-beige mt-6 ">
-            <span class="has-text-weight-bold has-text-beige">Les ressources sont précieuses, et votre temps aussi.</span>
+            <span class="has-text-weight-bold has-text-beige">Les ressources sont précieuses, et votre temps
+              aussi.</span>
             Cette page pèse <span class="has-text-weight-bold has-text-beige">305 Ko</span> et a demandé <span
               class="has-text-weight-bold has-text-beige">26 requêtes.</span>
             Une page web en moyenne dépasse les 2000 Ko et demande 70 requêtes.
 
             <br>
             <br>
-            Envie de connaître l’impact environnemental de votre site web ? Allez voir sur <a href="https://ecoindex.fr" target="_blank"
-              class="is-underlined has-text-beige has-hovering">ecoindex.fr</a>.
+            Envie de connaître l’impact environnemental de votre site web ? Allez voir sur <a href="https://ecoindex.fr"
+              target="_blank" class="is-underlined has-text-beige has-hovering">ecoindex.fr</a>.
           </h1>
         </div>
 
@@ -631,9 +659,10 @@
                 class="is-underlined pl-1 has-hovering" style="color: #E56B06;">Linkedin</a>
             </div>
             <div class="is-flex" style="align-items: center;">
-              <a href="https://www.facebook.com/fresquedelabiodiversite" target="_blank" class="is-underlined pl-1 is-orange"><img
-                  src="Images/pictoBulleFB.svg"></a>
-              <a href="https://www.facebook.com/fresquedelabiodiversite" target="_blank" class="is-underlined pl-1 has-hovering" style="color: #E56B06;">Facebook</a>
+              <a href="https://www.facebook.com/fresquedelabiodiversite" target="_blank"
+                class="is-underlined pl-1 is-orange"><img src="Images/pictoBulleFB.svg"></a>
+              <a href="https://www.facebook.com/fresquedelabiodiversite" target="_blank"
+                class="is-underlined pl-1 has-hovering" style="color: #E56B06;">Facebook</a>
             </div>
           </div>
         </div>
@@ -643,7 +672,7 @@
 
 
   <script type="text/javascript">
-    let atelier =document.getElementById('atelier')
+    let atelier = document.getElementById('atelier')
   </script>
 
 </body>
