[*] moficiations lien et échange Charles <-> Geoffrey

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               class="has-text-weight-bold">un atelier ludique et collaboratif </span>l'aspect systémique de l'érosion de
             la
             biodiversité : ce qu’elle est, ce qu’elle permet et ce qui la dégrade.</h6>
-          <a href=" https://www.billetweb.fr/multi_event.php?user=72404"
+          <a href="https://www.billetweb.fr/pro/fresquedelabiodiversite"
             class="button is-primary is-medium has-text-weight-bold">Je participe !</a>
 
         </div>
@@ -312,7 +312,8 @@
         <div class="box p-0">
           <a title="Vente de billets en ligne" href="https://www.billetweb.fr/multi_event.php?multi=u82762"
             class="shop_frame" target="_blank" data-src="https://www.billetweb.fr/multi_event.php?multi=u82762"
-            data-max-width="100%" data-initial-height="600" data-scrolling="yes" data-id="11476" data-resize="1">Vente de
+            data-max-width="100%" data-initial-height="600" data-scrolling="yes" data-id="11476" data-resize="1">Vente
+            de
             billets en ligne</a>
           <script type="text/javascript" src="https://www.billetweb.fr/js/export.js"></script>
         </div>
@@ -378,29 +379,6 @@
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
 
                 </div>
-                <img width="180px" src="Images/geoffreyVuillierLQ.jpg" class="is-relative" style="border-radius: 4px;">
-              </figure>
-              <span class='is-flex mt-4'>
-                <h1 class="title is-5 has-text-weight-bold py-4">
-                  Geoffrey Vuillier
-                </h1>
-                <a href="https://www.linkedin.com/in/geoffrey-vuillier/"><img src="Images/pictoBulleLinkedin.svg"
-                    class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
-              </span>
-
-              <h1 class="subtitle is-6 is-italic figure-quote">
-                " Les oiseaux mangent des abeilles ? Mais c’est horrible… "
-              </h1>
-              <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right">
-                Participant inconnu
-              </h1>
-            </div>
-
-            <div class="column is-6 has-max-width mx-mobile mt-mobile">
-              <figure class="image is-relative" style="width: 180px; height: 160px;">
-                <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
-
-                </div>
                 <img width="180px" src="Images/charlesSirotLQ.jpg" class="is-relative" style="border-radius: 4px;">
 
               </figure>
@@ -420,8 +398,32 @@
                 style="padding-bottom: 21px;">
                 Antoine de Saint-Exupéry
               </h1>
+            </div>
 
+            <div class="column is-6 has-max-width mx-mobile mt-mobile">
               <figure class="image is-relative" style="width: 180px; height: 160px;">
+                <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
+
+                </div>
+                <img width="180px" src="Images/geoffreyVuillierLQ.jpg" class="is-relative" style="border-radius: 4px;">
+              </figure>
+              <span class='is-flex mt-4'>
+                <h1 class="title is-5 has-text-weight-bold py-4">
+                  Geoffrey Vuillier
+                </h1>
+                <a href="https://www.linkedin.com/in/geoffrey-vuillier/"><img src="Images/pictoBulleLinkedin.svg"
+                    class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
+              </span>
+
+              <h1 class="subtitle is-6 is-italic figure-quote">
+                "La biodiversité assure la capacité de l’humanité à choisir des trajectoires nouvelles face à un avenir
+                incertain."
+              </h1>
+              <h1 class="subtitle is-6 has-text-weight-bold is-justify-content-right has-text-right">
+                IPBES
+              </h1>
+
+              <figure class="image is-relative" style="width: 180px; height: 160px; margin-top: 44px;">
                 <div class="rectangle is-absolute" style="top: -10px; left: -10px; border-radius: 5px;">
 
                 </div>
@@ -431,8 +433,8 @@
                 <h1 class="title is-5 has-text-weight-bold py-4">
                   Deloitte
                 </h1>
-                <a href="https://www2.deloitte.com/fr/fr/services/sustainability.html" target="_blank"><img src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2"
-                    style="height: 30.74px; width: 31.47px;"></a>
+                <a href="https://www2.deloitte.com/fr/fr/services/sustainability.html" target="_blank"><img
+                    src="Images/pictoBulleLienExt.svg" class="ml-3 mt-2" style="height: 30.74px; width: 31.47px;"></a>
               </span>
               <h1 class="subtitle is-6 is-italic figure-quote">
                 <!-- entrer citation -->
@@ -596,8 +598,9 @@
             <br>
             <br>
             Conçu avec sobriété et engagement par <a href="https://telescoop.fr" target="_blank"
-              class="has-hovering has-text-beige is-underlined">TelesCoop</a> (développement) et <a href="https://www.linkedin.com/in/l%C3%A9opoldine-mennessier-78378998/"
-              target="_blank" class="has-hovering has-text-beige is-underlined">Léopoldine Mennessier</a>
+              class="has-hovering has-text-beige is-underlined">TelesCoop</a> (développement) et <a
+              href="https://www.linkedin.com/in/l%C3%A9opoldine-mennessier-78378998/" target="_blank"
+              class="has-hovering has-text-beige is-underlined">Léopoldine Mennessier</a>
             (design).
           </h1>
         </div>
@@ -669,7 +672,6 @@
   let elt = document.getElementById("main");
 
   elt.appendChild(newElt);
-
 
   document.addEventListener('DOMContentLoaded', () => {
 
