Ajoute le premier encart

--- a/index.html
+++ b/index.html
@@ -322,26 +322,46 @@
     </div>
   </div>
 
-  <div class="columns is-flex is-justify-content-flex-end m-0 py-6 has-background-clay">
+  <div class="is-flex is-justify-content-center m-0 pt-6 has-background-clay">
+    <h2 class="is-size-3 has-text-primary">
+      Ils sont déjà <strong class="has-text-primary">plus de 11 000</strong> à avoir participé !
+    </h2>
+  </div>
+  <div class="columns is-flex is-justify-content-flex-end m-0 pt-6 has-background-clay is-relative">
     <div class="column is-8 has-background-light-brown is-relative" style="border-radius: 5px;">
       <div class="ml-4 py-5 has-text-light-beige">
-        <h2 class="title is-3 has-text-light-beige">
-          Ils sont déjà <span class="has-text-weight-bold has-text-light-beige">plus de 5000 </span> à avoir participé
-          !
+        <h2 class="title is-3 has-text-light-beige has-text-weight-bold">
+          Les autres manières d’agir
         </h2>
-        <div class="level">
-          <p class="has-text-light-beige">
-            Vous souhaitez avoir plus d'informations?
-          </p>
-          <a href="mailto:fresquedelabiodiversite@gmail.com">
-            <button class="button">Contactez-nous</button>
+        <div class="buttons">
+          <a class="button" href="https://www.helloasso.com/associations/fresque-de-la-biodiversite/adhesions/cotisation-association-fresque-de-la-biodiversite" target="_blank">
+            🦔 Adhérer à l’association 🦔
+          </a>
+          <a class="button" href="https://tally.so/r/wzxV7a" target="_blank">
+            🐌 Organiser ou animer un atelier 🐌
+          </a>
+          <a class="button" href="https://www.helloasso.com/associations/fresque-de-la-biodiversite/formulaires/1" target="_blank">
+            🧡 Faire un don 🧡
           </a>
         </div>
       </div>
-      <img class="is-absolute" style="right: 0px; top: -40px; width: 20vw; min-width: 300px;" src="Images/plante02.svg"
+
+      <img class="is-absolute" style="right: 0px; top: -75px; width: 20vw; min-width: 300px; pointer-events: none;" src="Images/plante02.svg"
         alt="Plante02">
     </div>
+    <img class="is-absolute" style="left: 0px; bottom: -90px; width: 20vw; min-width: 300px; pointer-events: none;" src="Images/plante03.svg" alt="">
+  </div>
 
+  <div class="has-background-clay">
+    <div class="container" style="max-width: 1230px;">
+      <div class="is-flex is-justify-content-flex-end is-align-content-center pt-4 pb-6">
+        <span class="has-text-primary has-text-weight-bold pt-1">Pour suivre nos activités et avoir plus d’informations</span>
+        <a href="https://www.facebook.com/fresquedelabiodiversite" target="_blank"
+           class="is-underlined is-orange ml-3"><img src="Images/pictoBulleFB.svg"></a>
+        <a href="https://www.linkedin.com/in/geoffrey-vuillier/" target="_blank" class="ml-3"><img src="Images/pictoBulleLinkedin.svg"
+                                                                                   class="" style="height: 30.74px; width: 31.47px;"></a>
+      </div>
+    </div>
   </div>
 
   <div class="has-background-beige is-relative">
